# vmod

./: LICENSE  Makefile  README.md  data.py  dvd_gnss_high.ipynb  dvd_gnss_low.ipynb  dvd_gnss_low_emcee.ipynb  dvd_insar_high.ipynb  dvd_insar_high_off.ipynb  dvd_insar_low_off.ipynb  dvd_joint_high.ipynb  dvd_joint_low.ipynb  environment.yml  example_unimak_joint.ipynb  fialko.py  inv_lsq_erebus.py  inv_lsq_fisher.py  inv_mcmc.py  inv_mcmc_erebus.py  inv_mcmc_erebus_pymc3.py  inv_mcmc_mogi.py  inverse.py  mcmc2_mogi.ipynb  mcmc_joint_insar_gps.ipynb  mctigue.py  mogi.py  nish.py  okada.py  penny.py  pyproject.toml  regsill_test.ipynb  requirements.txt  source.py  synethetic_edm.ipynb  synthetic_edm.ipynb  synthetic_reg_sill.ipynb  test_fialko.py  test_mogi.py  test_okada.py  tests.ipynb  (+7 more)
.ipynb_checkpoints/: dvd_insar_high_off-checkpoint.ipynb
examples/dvd/gps/: Synth_ENU_High_Gaussian.csv  Synth_ENU_Low_Gaussian.csv
examples/dvd/insar/: Synth_Asc_Low_Correlated.unwr  asc_high.txt  asc_low.txt  des_high.txt  des_low.txt
examples/gps/: fisher_gnss.txt  unimak_gnss_NOAM.txt  unimak_gnss_NOAM_AB06.txt
examples/insar/: mask_unimak_asc.npy  mask_unimak_des.npy  tanaga59_ref.csv  temporalCoherence.h5  temporalCoherence_des.h5  unimak_asc_ref.csv  unimak_des_ref.csv
examples/tilt/: mctigue_analytical.csv  mctigue_fdifferences.csv  mogi_analytic.csv  mogi_fdifferences.csv  mogi_synthetic.csv
varres/: covaraps.py  decompose.py  decomposewithmap.py  incidence.unw  incidence.unw.rsc  insar.unw  loaddata.py  logmgr.py  newtest.txt  reader.py  tree.py  utils.py
vmod/: inverse.py  util.py
vmod/data/: __init__.py  data.py  edm.py  gnss.py  insar.py  joint.py  level.py  tilt.py
vmod/source/: __init__.py  cdm.py  crfault.py  mctigue.py  mogi.py  nish.py  okada.py  penny.py  regdis.py  regsill.py  rfault.py  source.py  vshell.py  vsphere.py  wellsite.py  yang.py
