[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "vmod-geodesy"
version = "1.0.1"
description = "Versatile Modeling of Deformation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Mario Angarita Vargas", email = "mfangaritasr@alaska.edu"},
    {name = "Ronni Grapenthin", email = "rgrapenthin@alaska.edu"},
    {name = "Scott Henderson", email = "scottyh@uw.edu"},
    {name = "Michael Christoffersen", email = "mchristoffersen@alaska.edu"},
    {name = "Kyle Anderson", email = "kranderson@usgs.gov"}
]
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "rasterio",
    "scipy",
    "scikit-image",
    "utm",
    "jupyterlab",
    "corner",
    "emcee",
]

[project.urls]
documentation = "https://github.com/uafgeotools/vmod"
repository = "https://github.com/uafgeotools/vmod"
